feat:Refactor server with Gin framework (#9)
